# Covenant

./: .env.example  .gitignore  CLAUDE.md  DEVELOPER-GUIDE.md  Dockerfile  LICENSE  Nvidia_Job.md  On_Boarding.md  Project.md  README.md  covenant.lock.json  covenant.toml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
covenant/: __init__.py  _types.py  cli.py  config.py  contract.py  diff.py  errors.py  fingerprint.py  introspect.py  report.py
covenant/judge/: __init__.py
covenant/operator/: __init__.py  handlers.py  reconcile.py
covenant/proxy/: __init__.py  detect.py  metrics.py  quarantine.py  server.py
covenant/store/: __init__.py  base.py  memory.py  postgres.py  schema.sql
demo/: _shot.py  a2a.ps1  a2a_task.py  agent.ps1  agent_task.py  drift.ps1  drift_patch.md  mcp_probe.py  reset.ps1  run_demo.md  watch.ps1
deploy/: prometheus.yml
docs/: ARCHITECTURE.md  BUILD_LOG.md
docs/specs/: 2026-07-01-covenant-layer0-contract-core-design.md  2026-07-01-covenant-layer1-proxy-quarantine-design.md  2026-07-03-covenant-layer3-behavioral-probes-design.md  2026-07-03-covenant-layer5-k8s-operator-design.md
examples/: demo_layer1.py  demo_layer2.py  mcp_server.py  mcpcontract.yaml
test_mcp_server/: Dockerfile  server.py
tests/: test_cli.py  test_config.py  test_contract.py  test_detect.py  test_diff.py  test_fingerprint.py  test_introspect.py  test_judge.py  test_memory_store.py  test_metrics.py  test_operator.py  test_probes.py  test_proxy.py  test_proxy_store.py  test_quarantine.py  test_report.py  test_store_postgres.py
warden/: Dockerfile  capture.py  cli.py  dashboard.py  db.py  drift.py  main.py  proxy.py  schema.sql
(+13 files in other folders)
