[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covenant-mcp"
version = "0.1.0"
description = "A contract linter for MCP servers — catch breaking tool-schema changes before they ship."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Mhemd139" }]
keywords = ["mcp", "model-context-protocol", "contract", "schema", "linter", "drift", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp>=1.10",
    "typer>=0.12",
    "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/Mhemd139/Covenant"
Repository = "https://github.com/Mhemd139/Covenant"
Issues = "https://github.com/Mhemd139/Covenant/issues"

[project.scripts]
covenant = "covenant.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "anyio>=4",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["covenant"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
